# language-testing

./: README.md
csharp/HelloWorld/: Program.cs
haskell/hello-world/: .gitignore  LICENSE  hello-world.cabal
haskell/hello-world/.stack-work/: stack.sqlite3
haskell/hello-world/.stack-work/ghci/700492b8/: cabal_macros.h
haskell/hello-world/src/: Main.hs
haskell/helloworld/: LICENSE  package.yaml  stack.yaml
haskell/helloworld/src/: Lib.hs
haskell/io/: todo  todo.hi  todo.hs  todo.txt
haskell/problems/: reciprocal.hs  rpn.hs
haskell/road/: prime.hs
haskell/testing/: package.yaml
haskell/testing/src/: Lib.hs
javascript/: js_test.html  test.html
prolog/: facts.pl  for_noah.py  listr.pl  noahs_problem.pl
